--- a/app/styles/kribsnacks.css
+++ b/app/styles/kribsnacks.css
@@ -30,10 +30,8 @@ h1 {
     list-style: none;
     margin:0;
     padding:0;
-}
-
-.question, .answer {
-    padding:20px;
+    display: block;
+    width:100%;
 }
 
 .card {
@@ -41,13 +39,35 @@ h1 {
     border:1px solid #DDDDDD;
     background-color: #FFFFFF;
     color:#999999;
+    clear: both;
+    margin-bottom:20px;
+    box-shadow: 1px 2px 5px #DDDDDD;
 }
 
-.question {
+.card .question,
+.card .answer {
+    padding:20px;
+}
+
+.card .question {
     background-color: #333333;
 }
 
-.card button {
+.card .answer-question {
+    font-weight: bold;
+    border-bottom:1px solid #DDDDDD;
+    display: block;
+    padding-bottom:15px;
+}
+
+.card .number {
+    color:#AAAAAA;
+    font-weight: bold;
+    display: inline-block;
+    float: right;
+}
+
+.card .flip {
     border:0;
     width:100%;
     padding:10px;
@@ -55,5 +75,11 @@ h1 {
 }
 
 .hidden {
+    display:none;
+}
+
+.minimized .question,
+.minimized .answer, 
+.minimized .flip {
     display:none;
 }
