--- a/app/styles/kribsnacks.css
+++ b/app/styles/kribsnacks.css
@@ -1,5 +1,6 @@
+html,
 body {
-    font-size: 14px;
+    font-size: 10px;
 }
 
 #container {
@@ -8,28 +9,46 @@ body {
     height:100%;
 }
 
-h1 {
-    font-size:14px;
-}
-
 #menu {
     display:table-cell;
-    width: 150px;
-    background-color:#e2e2e2;
-    padding:20px;
+    width: 200px;
+    background-color:#333333;
+    color:#CCCCCC;
+    padding:0;
+    text-align: right;
+    vertical-align: top;
+}
+
+#menu i {
+    display: inline-block;
+    width:50px;
+    text-align: center;
+    color: #777777;
+    text-transform: uppercase;
+    font-size: 2rem;
+}
+
+#menu a:hover i {
+    color:#FFFFFF;
 }
 
 #menu.collapsed {
-    width:20px;
+    width:50px;
 }
 
 #menu .logo {
     cursor: pointer;
+    border-bottom:1px solid #666666;
+    margin:0;
+    padding:1.5rem 0;
+    font-size: 1.85rem;
 }
 
 #menu .logo-mini {
     display: none;
     cursor: pointer;
+    margin:0;
+    padding:1.5rem 0;
 }
 
 #menu.collapsed .logo-mini {
@@ -44,12 +63,28 @@ h1 {
 
 #menu .topics {
     list-style: none;
-    margin:0;
     padding:0;
 }
 
 #menu .topics li {
     padding-bottom:5px;
+}
+
+#menu a {
+    color:#888888;
+    text-decoration: none;
+    margin-right:20px;
+}
+
+#menu a:hover {
+    color:#FFFFFF;
+}
+
+#menu .topic {
+    font-size: 1.2rem;
+    line-height: 2.4rem;
+    text-transform: uppercase;
+    letter-spacing: 1px;
 }
 
 #page {
@@ -58,8 +93,11 @@ h1 {
     padding:20px;
 }
 
-h3 {
+h2 {
     margin:0;
+    font-size: 2rem;
+    color:#999999;
+    text-transform: uppercase;
 }
 
 .deck {
@@ -68,6 +106,12 @@ h3 {
     background: transparent;
     width:100%;
     line-height: 50px;
+}
+
+h3 button {
+    font-size: 1.6rem;
+    text-align: left;
+    font-weight: normal;
 }
 
 .cards {
@@ -83,8 +127,10 @@ h3 {
     background-color: #FFFFFF;
     color:#999999;
     clear: both;
-    margin-bottom:20px;
+    margin-bottom:1rem;
     box-shadow: 1px 2px 5px #DDDDDD;
+    font-size: 1.4rem;
+    position: relative;
 }
 
 .card .question,
@@ -103,18 +149,21 @@ h3 {
     padding-bottom:15px;
 }
 
-.card .number {
-    color:#AAAAAA;
-    font-weight: bold;
-    display: inline-block;
-    float: right;
-}
-
 .card .flip {
-    border:0;
-    width:100%;
-    padding:10px;
-    background-color: #f2f2f2;
+    background: transparent;
+    border: 0;
+    color:#AAAAAA;
+    display: block;
+    font-weight: bold;
+    height:50px;
+    line-height: 5rem;
+    margin:0;
+    padding:0;
+    position: absolute;
+    right:0;
+    text-align: center;
+    top:0;
+    width:50px;
 }
 
 .hidden {
