--- a/app/styles/kribsnacks.css
+++ b/app/styles/kribsnacks.css
@@ -108,6 +108,11 @@ h2 {
     line-height: 50px;
 }
 
+h3 {
+    margin:0;
+    padding:0;
+}
+
 h3 button {
     font-size: 1.6rem;
     text-align: left;
